src/styles.css
.live-container{
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    height: 100vh;
    overflow: auto
}

.left-container{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 33vw;
    padding: 2% 5% 2% 5%;
    z-index: 5;
}

.devpost-tables-container {
    display: flex;
    justify-content: space-evenly;
    align-items: center
}

.devpost {
    
    width: 150px
}

.mlh-workshops {
    display: flex;
    justify-content: space-evenly;
    align-items: center
}
.mlh-hardware {
    height: 50px;
    padding-right: 25%
}

.social-media-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center
}
.music-player-section{
    z-index: 5;
}
.right-container{
    display: flex;
    flex-direction: column;
    z-index: 5;
    padding: 2% 5% 2% 0%;
    height: 75%;
    width: 66vw;
}

.timer-container {
    display: flex;
    flex-direction: row;
    justify-content: space-around
}

.schedule-and-announcements {
    display: flex;
    flex-direction: row;
    justify-content: space-around
}
.anouncements-container {
    padding-right: 5%
}

.live-schedule{
    height: 70vh;
    overflow-y: auto
}

.announcement-list {
    height: 70vh;
    overflow-y: auto
}
h2 {
    color: grey;
}

h1 {
    color: gray;
}
.live-schedule .card-container .card-content p{
    color: black;
}

